# energy-commodity-volatility-modeling

./: 0. Notebook metadata  1. Imports, paths, and config  2. Data ingestion  4. Modeling and forecasting  6. Risk view and simple P&L dispersion  README.md  download_data.py
config/: model_config.yaml
ng-volatility-forecasting/: pyproject.toml
ng-volatility-forecasting/config/: backtest.yaml  data_sources.yaml  features.yaml  models.yaml
ng-volatility-forecasting/scripts/: download_data.py  generate_synthetic_data.py  run_pipeline.py
ng-volatility-forecasting/src/ng_vol/: pipeline.py
ng-volatility-forecasting/src/ng_vol/config/: loader.py
ng-volatility-forecasting/src/ng_vol/features/: curve.py  storage.py  volatility.py  weather.py
ng-volatility-forecasting/src/ng_vol/forecasting/: engine.py
ng-volatility-forecasting/src/ng_vol/io/: ingestion.py  validation.py
ng-volatility-forecasting/src/ng_vol/models/: base.py  har.py  tree.py
ng-volatility-forecasting/src/ng_vol/preprocessing/: align.py
ng-volatility-forecasting/src/ng_vol/regimes/: classifier.py
ng-volatility-forecasting/src/ng_vol/reporting/: plots.py
ng-volatility-forecasting/src/ng_vol/risk/: pnl_proxy.py
ng-volatility-forecasting/tests/: test_features.py  test_ingestion.py  test_models.py
src/ng_vol/features/: curve.py
src/ng_vol/risk/: pnl_proxy.py
