[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# -------------------------------------------------------------------
# Project metadata
# -------------------------------------------------------------------
[project]
name = "ng-volatility-forecasting"
version = "0.1.0"
description = "Modular pipeline for natural gas volatility forecasting and hedge timing"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

license = { text = "MIT" }

keywords = [
    "natural gas",
    "volatility",
    "energy markets",
    "hedging",
    "quantitative finance",
    "risk management"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

# -------------------------------------------------------------------
# Core runtime dependencies
# -------------------------------------------------------------------
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "pyyaml>=6.0",
    "requests>=2.28",
    "scikit-learn>=1.2",
    "statsmodels>=0.13",
    "matplotlib>=3.6",
    "seaborn>=0.12"
]

# -------------------------------------------------------------------
# Optional dependency groups
# -------------------------------------------------------------------
[project.optional-dependencies]

dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "ipykernel>=6.0"
]

notebooks = [
    "jupyterlab>=4.0"
]

# -------------------------------------------------------------------
# Package discovery
# -------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

# -------------------------------------------------------------------
# Tooling configuration
# -------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py310"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
